copy of open source branch to make fixes for struts depencency